Metrics: add CH eccentricity & compactness